src/pages/ListPage/_components/Pagination/Pagination.module.scss
.wrapper {
  color: var(--primary-color-gray);
  margin-top: 20px;
  display: flex;
  justify-content: space-between;
}

.pagination {
  font-family: "Furore";
  font-weight: 400;
  font-size: 14px;
  display: flex;

  .currentPage {
    background-color: var(--accent-color-red);
    cursor: unset;
  }

  :first-child,
  :last-child {
    padding: 10px 18px;
  }

  Button {
    padding: 10px;
    line-height: 10px;
    border: 1px solid var(--secondary-color-gray);
    border-right: none;
  }

  :last-child {
    border-right: 1px solid var(--secondary-color-gray);
  }

  .formInput {
    background-color: transparent;
    outline: none;
    border: 1px solid var(--secondary-color-gray);
    border-right: none;
    width: 100px;
    color: inherit;
    text-align: center;
  }
}

.rows {
  font-family: "Jost";
  font-size: 15px;
  font-weight: 500;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 30px;

  .selectCount {
    background-color: transparent;
    border: none;
    outline: 1px transparent solid;
    color: inherit;
    cursor: pointer;
    border-radius: 5px;
    transition: 0.2s all ease;

    &:hover {
      outline: 1px var(--primary-color-gray) solid;
    }
  }
}

